--- a/Carros/app/src/main/res/menu/menu_main.xml
+++ b/Carros/app/src/main/res/menu/menu_main.xml
@@ -4,4 +4,9 @@
         android:id="@+id/action_about"
         android:title="@string/action_about"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_salvar"
+        android:title="@string/action_salvar"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_save_white"/>
 </menu>
