--- a/Carros/app/src/main/res/layout/activity_carros.xml
+++ b/Carros/app/src/main/res/layout/activity_carros.xml
@@ -3,11 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <include layout="@layout/include_toolbar" />
-
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <include layout="@layout/toolbar" />
+    <!-- layout de marcação para o fragment -->
+    <FrameLayout android:id="@+id/container"
+        android:layout_width="match_parent" android:layout_height="match_parent" />
 </LinearLayout>
