--- a/Carros/app/src/main/res/layout/fragment_mapa.xml
+++ b/Carros/app/src/main/res/layout/fragment_mapa.xml
@@ -1,13 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="br.com.livroandroid.carros.fragments.MapaFragment">
-
+    android:layout_height="match_parent">
     <fragment
         android:id="@+id/mapFragment"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        />
 </FrameLayout>
