--- a/Carros/app/src/main/res/values/strings_config.xml
+++ b/Carros/app/src/main/res/values/strings_config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Chave do Maps gerada do SHA1 -->
-    <string name="API_KEY">AIzaSyDYCu8-Ijlg-dug-VzT1SC_6fekDKn0oTQ</string>
+	<!-- Chave copiada do Google API Console -->
+	<string name="API_KEY">AIzaSyA2M2Lo5CKmQ4_zcnhxnIwe3nmg9EI0B2A</string>
 </resources>
