--- a/capitulos/cap05-activity/HelloActivity/app/src/main/res/layout/activity_main.xml
+++ b/capitulos/cap05-activity/HelloActivity/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,9 @@
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="16dp">
+    <ImageView android:id="@+id/img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:layout_gravity="right"
         android:layout_width="match_parent"
