--- a/capitulos/cap06-actionbar/Ex1-HelloActionBar/app/src/main/res/values-v21/styles.xml
+++ b/capitulos/cap06-actionbar/Ex1-HelloActionBar/app/src/main/res/values-v21/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Tema Material - Android 4.0 -->
     <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
         <!-- Cor primária da action bar. -->
         <item name="android:colorPrimary">@color/primary</item>
