--- a/capitulos/cap06-actionbar/Ex1-HelloActionBar/app/src/main/res/values/styles.xml
+++ b/capitulos/cap06-actionbar/Ex1-HelloActionBar/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Tema Holo - Android 3.0. -->
     <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
         <!-- Customize your theme here. -->
     </style>
