--- a/capitulos/cap05-activity/HelloActivity/app/src/main/res/layout/activity_main.xml
+++ b/capitulos/cap05-activity/HelloActivity/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:orientation="vertical"
     android:padding="16dp">
-    <ImageView android:id="@+id/img"
+
+    <ImageView
+        android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
     <TextView
         android:layout_gravity="right"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/usuario" />
+
     <EditText
         android:id="@+id/tLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:singleLine="true" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="@string/senha" />
+
     <EditText
         android:id="@+id/tSenha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:singleLine="true" />
+
     <Button
         android:id="@+id/btLogin"
         android:layout_width="200dp"
@@ -38,6 +44,5 @@
         android:layout_marginTop="6dp"
         android:text="@string/login"
         android:textColor="#ffffff"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center" />
 </LinearLayout>
