--- a/capitulos/cap05-activity/HelloActivity/app/src/main/res/layout/exemplo_views.xml
+++ b/capitulos/cap05-activity/HelloActivity/app/src/main/res/layout/exemplo_views.xml
@@ -7,7 +7,8 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:src="@drawable/ic_launcher" />
 
     <TextView
